--- a/BookingApp/BookingApp/BookingApp.csproj
+++ b/BookingApp/BookingApp/BookingApp.csproj
@@ -256,12 +256,28 @@
     <Compile Include="Migrations\201706040304228_Initial.Designer.cs">
       <DependentUpon>201706040304228_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706051124597_InitialDBModel.cs" />
+    <Compile Include="Migrations\201706051124597_InitialDBModel.Designer.cs">
+      <DependentUpon>201706051124597_InitialDBModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706051145147_UpdatedInitialModel.cs" />
+    <Compile Include="Migrations\201706051145147_UpdatedInitialModel.Designer.cs">
+      <DependentUpon>201706051145147_UpdatedInitialModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Accomodation.cs" />
+    <Compile Include="Models\AccomodationType.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BAContext.cs" />
     <Compile Include="Models\BAIdentityUser.cs" />
     <Compile Include="Models\AppUser.cs" />
+    <Compile Include="Models\Comment.cs" />
+    <Compile Include="Models\Country.cs" />
+    <Compile Include="Models\Place.cs" />
+    <Compile Include="Models\Region.cs" />
+    <Compile Include="Models\Room.cs" />
+    <Compile Include="Models\RoomReservations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Providers\CustomJwtFormat.cs" />
@@ -343,6 +359,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201706040304228_Initial.resx">
       <DependentUpon>201706040304228_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706051124597_InitialDBModel.resx">
+      <DependentUpon>201706051124597_InitialDBModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706051145147_UpdatedInitialModel.resx">
+      <DependentUpon>201706051145147_UpdatedInitialModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
