--- a/BookingApp/BookingApp/Web.config
+++ b/BookingApp/BookingApp/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="BADB" connectionString="Data Source=TODOROVIC;Initial Catalog=BookingAppDB;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="BookingAppContext" connectionString="Data Source=192.168.100.251;      Initial Catalog=101_E3442013;      User ID=admin;Password=pa$$word;     Integrated Security=False;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="as:AudienceId" value="bWlsYXNoaW4=" />
