Fixed controllers and added migration for Comment keys

--- a/BookingApp/BookingApp/BookingApp.csproj
+++ b/BookingApp/BookingApp/BookingApp.csproj
@@ -295,6 +295,10 @@
     <Compile Include="Migrations\201706112024201_AppUserChanged.Designer.cs">
       <DependentUpon>201706112024201_AppUserChanged.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706142335348_CommentKeysChanged.cs" />
+    <Compile Include="Migrations\201706142335348_CommentKeysChanged.Designer.cs">
+      <DependentUpon>201706142335348_CommentKeysChanged.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Accomodation.cs" />
     <Compile Include="Models\AccomodationType.cs" />
@@ -407,6 +411,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706112024201_AppUserChanged.resx">
       <DependentUpon>201706112024201_AppUserChanged.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706142335348_CommentKeysChanged.resx">
+      <DependentUpon>201706142335348_CommentKeysChanged.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
