--- a/BookingApp/BookingApp/BookingApp.csproj
+++ b/BookingApp/BookingApp/BookingApp.csproj
@@ -384,6 +384,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\AccImages\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
