--- a/BookingApp/BookingApp/Web.config
+++ b/BookingApp/BookingApp/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <!--<add name="BookingAppContext" connectionString="Data Source=192.168.100.251;      Initial Catalog=ProjekatWebE344;      User ID=admin;Password=pa$$word;     Integrated Security=False;" providerName="System.Data.SqlClient" />--> 
-    <add name="BookingAppContext" connectionString="Data Source=192.168.100.251;Initial Catalog=E350-2013WEB;Integrated Security=False;User ID=admin;Password=pa$$word;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <!--<add name="BookingAppContext" connectionString="Data Source=192.168.100.251;Initial Catalog=E350-2013WEB;Integrated Security=False;User ID=admin;Password=pa$$word;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />-->
+    <add name="BookingAppContext" connectionString="Data Source=desktop-2flhlul\sqlexpress; Initial Catalog=ProjekatWebE344; persist security info=True; Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="as:AudienceId" value="bWlsYXNoaW4=" />
